--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "03.mycarv",
+   "name": "03_mycarv",
    "version": "0.0.1",
    "description": "",
    "author": "",
@@ -61,7 +61,7 @@
       "ts-loader": "^9.4.3",
       "ts-node": "10.9.1",
       "tsconfig-paths": "^4.2.0",
-      "typescript": "4.5.2"
+      "typescript": "5.4.3"
    },
    "jest": {
       "moduleFileExtensions": [
